--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: matlab
 matlab: R2019b
-script: matlab -batch 'disp("Hello World"), TROPIC_add_path();'
+script: matlab -batch 'disp("Hello World");'
