--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
-language: matlab
-matlab: R2019b
+language: matlab #matlab: R2020a
+jobs:
+  include:
+    - os: linux
+      dist: bionic
+      matlab: R2020a
+    - os: osx
+      osx_image: xcode12.4
+      matlab: R2020a
 script: matlab -batch 'disp("Hello World");'
