--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,4 @@ jobs:
 compiler: gcc
 
 script: 
-  - matlab -batch 'TROPIC_add_path();'
-  - matlab -batch 'cd examples/spatial-12-dof-biped/, main;'
+  - matlab -batch 'TROPIC_add_path(), cd examples/spatial-12-dof-biped/, main;'
