--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,6 @@ jobs:
 compiler: gcc
 
 script: 
+  - matlab -batch 'TROPIC_add_path(), cd examples/planar-7-dof-biped/, main;'
   - matlab -batch 'TROPIC_add_path(), cd examples/spatial-12-dof-biped/, main;'
+  - matlab -batch 'TROPIC_add_path(), cd examples/spatial-20-dof-biped/, main;'
